[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Menu/CustomMenuParts/CustomBtn.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Menu/Lobby/Lobby.gd" type="Script" id=2]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerLabelContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -514.0
margin_top = 156.0
margin_right = -363.0
margin_bottom = -156.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayersLabel" parent="PlayerLabelContainer" instance=ExtResource( 1 )]
margin_right = 151.0
margin_bottom = 39.0
text = "Players"

[node name="PlayerList" type="VBoxContainer" parent="PlayerLabelContainer"]
margin_top = 43.0
margin_right = 151.0
margin_bottom = 43.0

[node name="PlayBtn" parent="." instance=ExtResource( 1 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -169.479
margin_top = -89.7239
margin_right = -83.4792
margin_bottom = -50.7239
text = "play"
[connection signal="gui_input" from="PlayBtn" to="." method="_on_PlayBtn_clicked"]
